Moves to 6.0.2 and removes dependency on web-commons