@@ -1,5 +1,14 @@
-FROM openjdk:8-jdk-alpine
-MAINTAINER Sergio Marcelino <s.marcelino@entando.com>
+FROM openjdk:8-jdk-slim
+ENV PORT 8080
+ENV CLASSPATH /opt/lib
+EXPOSE 8080
 
-COPY target/generated-artifact.jar app.jar
-CMD ["java", "-jar", "app.jar"]
+# copy pom.xml and wildcards to avoid this command failing if there's no target/lib directory
+COPY pom.xml target/lib* /opt/lib/
+
+# NOTE we assume there's only 1 jar in the target dir
+# but at least this means we don't have to guess the name
+# we could do with a better way to know the name - or to always create an app.jar or something
+COPY target/entando-k8s-service.jar /opt/app.jar
+WORKDIR /opt
+CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "app.jar"]
